syntax = "proto3";

service Jwch {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Getinfo (GetInfoRequest) returns (GetInfoResponse) {}
  rpc JwtUserLogin (JwtUserLoginRequest) returns (JwtUserLoginResponse) {}
}

 message LoginRequest {
   string stdno = 1;
   string password = 2;
 }

 message LoginResponse {}

 message GetInfoRequest {
   string stdno = 1;
   string password  = 2;
 }
 message GetInfoResponse {
   string stdno = 1;
   string realname = 2;
   string grade = 3;
   string college = 4;
 }

 message JwtUserLoginRequest {
   string stdno = 1;
   string password = 2;
 }
 message JwtUserLoginResponse {
   string payload = 1;
 }